# wyvern

./: .gitignore  .pre-commit-config.yaml  .testing_env  LICENSE  README.md  log_config.yml  pyproject.toml  sdk_ref.md  setup.cfg
.github/.github/: pull_request_template.md
.github/.github/workflows/: pre-commit.yml  pytest.yml
.github/workflows/: pre-commit.yml  pytest.yml
docs/: development.md
examples/: example_business_logic.py  feature_store_main.py  real_time_features_main.py
tests/: conftest.py
tests/components/business_logic/: test_pinning_business_logic.py
tests/feature_store/: test_real_time_features.py
tests/load_test/: load_test.js
tests/scenarios/: test_indexation.py  test_product_ranking.py
tests/scenarios/single_entity_pipelines/: test_single_entity_pipeline.py
wyvern/: __init__.py  api.py  config.py  exceptions.py  index.py  redis.py  request_context.py  service.py  tracking.py  utils.py  wyvern_logging.py  wyvern_request.py  wyvern_tracing.py  wyvern_typing.py
wyvern/aws/: kinesis.py
wyvern/cli/: commands.py
wyvern/clients/: snowflake.py
wyvern/components/: api_route_component.py  component.py  pipeline_component.py  ranking_pipeline.py  single_entity_pipeline.py  singular_pipeline.py
wyvern/components/business_logic/: boosting_business_logic.py  business_logic.py  pinning_business_logic.py
wyvern/components/candidates/: candidate_logger.py
wyvern/components/events/: events.py
wyvern/components/features/: feature_logger.py  feature_retrieval_pipeline.py  feature_store.py  realtime_features_component.py
wyvern/components/helpers/: linear_algebra.py  polars.py  sorting.py
wyvern/components/impressions/: impression_logger.py
wyvern/components/index/: __init__.py  _index.py
wyvern/components/models/: base_ranking_model.py  model_chain_component.py  model_component.py  (+3 more)
wyvern/core/: compression.py  http.py  httpx.py
wyvern/entities/: candidate_entities.py  feature_entities.py  feature_entity_helpers.py  identifier.py  identifier_entities.py  index_entities.py  model_entities.py  request.py
wyvern/event_logging/: event_logger.py
wyvern/experimentation/: client.py  experimentation_logging.py
wyvern/feature_store/: constants.py  feature_server.py  historical_feature_util.py  schemas.py
wyvern/helper/: sort.py
wyvern/web_frameworks/: fastapi.py
(+4 files in other folders)
